[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/popup/MessagePopup.gd" type="Script" id=1]
[ext_resource path="res://art/MainMenu/Blank-popup.png" type="Texture" id=2]
[ext_resource path="res://font/CarterOne.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://art/MainMenu/Cancel.png" type="Texture" id=4]
[ext_resource path="res://art/sounds/click.wav" type="AudioStream" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.901961 )

[sub_resource type="DynamicFont" id=2]
size = 25
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=3]
resource_name = "popup"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.18, 0.29 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.3, 0.3 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}

[node name="MessagePopup" type="PopupPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -188.0
margin_top = -333.5
margin_right = 188.0
margin_bottom = 333.5
rect_scale = Vector2( 0.3, 0.3 )
rect_pivot_offset = Vector2( 188.439, 327.342 )
texture = ExtResource( 2 )
stretch_mode = 4

[node name="message" type="Label" parent="TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -87.0
margin_top = -66.5
margin_right = 103.0
margin_bottom = 63.5
custom_fonts/font = SubResource( 2 )
text = "Coming soon"
align = 1
valign = 1
autowrap = true

[node name="btnClose" type="Button" parent="TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -35.5
margin_top = 81.5
margin_right = 71.5
margin_bottom = 182.5
rect_scale = Vector2( 0.7, 0.7 )
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 4 )
flat = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="TextureRect"]
autoplay = "popup"
anims/popup = SubResource( 3 )

[node name="ClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "Normal"

[connection signal="button_down" from="TextureRect/btnClose" to="." method="_on_btnClose_button_down"]
[connection signal="button_up" from="TextureRect/btnClose" to="." method="_on_btnClose_button_up"]
[connection signal="pressed" from="TextureRect/btnClose" to="." method="_on_btnClose_pressed"]
